# kzguard

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  Cargo.toml  README.md  package.json  tsconfig.json
backend/src/: app.ts  config.rs  error.rs  lib.rs  main.rs  server.ts  state.rs
backend/src/application/: admins.rs  auth.rs  bans.rs  communities.rs  mappers.rs  mod.rs  operation_logs.rs  server_access.rs  server_presence.rs  whitelist.rs  whitelist_restrictions.rs
backend/src/config/: env.ts
backend/src/data/: seed.ts
backend/src/db/: mysql.ts
backend/src/domain/: db.rs  models.rs
backend/src/http/: common.rs  mod.rs  requests.rs
backend/src/http/handlers/: admins.rs  auth.rs  bans.rs  communities.rs  health.rs  mod.rs  operation_logs.rs  public.rs  server_access.rs  server_bans.rs  server_presence.rs  users.rs  whitelist.rs
backend/src/infra/: mod.rs  mysql.rs  redis.rs  seed.rs
backend/src/modules/admins/: routes.ts  service.ts
backend/src/modules/bans/: routes.ts  service.ts
backend/src/modules/communities/: routes.ts  service.ts
backend/src/modules/health/: routes.ts
backend/src/modules/operation-logs/: routes.ts  service.ts
backend/src/modules/users/: routes.ts
backend/src/modules/whitelist/: routes.ts  service.ts
backend/src/store/: appStore.ts
backend/src/support/: convert.rs  ids.rs  mod.rs  process.rs  rcon.rs  steam.rs  time.rs  validation.rs  web.rs
backend/src/types/: index.ts
backend/src/utils/: rcon.ts  steam.ts  validation.ts
csgo-plugin/: README.md  (+3 more)
(+37 files in other folders)
